# unstable-mensa

./: README.md  pyproject.toml
src/unstable_mensa/: main.py
